@@ -4,9 +4,10 @@ CefBinaryValue => CefBase
 CefDictionaryValue => CefBase
 std::vector< CefString > => std::vector< CefString >
 CefListValue => CefBase
+CefProcessMessage => CefBase
 CefRefCount => CefRefCount
-cef::CEFManager::Traits => cef::CEFManager::Traits
 cef::CEFViewBase::Traits => cef::CEFViewBase::Traits
+cef::CEFManager::Traits => cef::CEFManager::Traits
 cef::CEFManager => CefBase
 cef::CEFViewBase => CefBase
 cef::DX9CEFManager => CefBase
