@@ -115,3 +115,4 @@
 - Addinig initial cef project
 - Added first working implementation of mxcef module.
 - Build minimal bindings for CEF process message support.
+- Added support for Process message lua bindings.
